@startuml
left to right direction
title Arquitetura do Sistema - Visão de Módulos e Componentes

skinparam componentStyle uml2
skinparam package {
  backgroundColor #E8EAF6
  borderColor #303F9F
}

' ==========================================================
' 1. DEFINIÇÃO DAS CAMADAS E AGRUPAMENTOS
' ==========================================================

package Apresentacao <<Camada do Usuário>> {
    ' Módulos de Apresentação e Interfaces de Apresentação (IAA, IAHotel, etc.)
    [ModuloApresentacaoAutenticavel] as MAA
    [ModuloApresentacaoHospede] as MAHospede
    [ModuloApresentacaoHotel] as MAHotel
    [ModuloApresentacaoQuarto] as MAQuarto
    [ModuloApresentacaoReserva] as MAReserva
    [ModuloApresentacaoPessoal] as MAPessoal

    interface InterfaceApresentacaoAutenticavel as IAA
    interface InterfaceApresentacaoHospede as IAHospede
    interface InterfaceApresentacaoHotel as IAHotel
    interface InterfaceApresentacaoQuarto as IAQuarto
    interface InterfaceApresentacaoReserva as IAReserva
    interface InterfaceApresentacaoPessoal as IAPessoal
}

package Servico <<Camada Lógica de Negócio>> {
    ' Módulos de Serviço e Interfaces de Serviço (ISA, ISHospede, etc.)
    [ModuloServicoAutenticavel] as MSA
    [ModuloServicoHospede] as MSHospede
    [ModuloServicoHotel] as MSHotel
    [ModuloServicoQuarto] as MSQuarto
    [ModuloServicoReserva] as MSReserva
    [ModuloServicoPessoal] as MSPessoal

    interface InterfaceServicoAutenticavel as ISA
    interface InterfaceServicoHospede as ISHospede
    interface InterfaceServicoHotel as ISHotel
    interface InterfaceServicoQuarto as ISQuarto
    interface InterfaceServicoReserva as ISReserva
    interface InterfaceServicoPessoal as ISPessoal
}

package Persistencia <<Camada de Acesso à Informação>> {
    ' Módulo CAI e Interface de Acesso à Informação
    [ModuloAcessoInformacao] as MAI
    interface InterfaceAcessoInformacao as IAI
}

[BD / STL] as DadosBrutos

' ==========================================================
' 2. REALIZAÇÃO/IMPLEMENTAÇÃO (BOLA - O FORNECEDOR)
' ==========================================================

' Módulos de Apresentação implementam as interfaces de Apresentação
IAA o-- MAA
IAHospede o-- MAHospede
IAHotel o-- MAHotel
IAQuarto o-- MAQuarto
IAReserva o-- MAReserva
IAPessoal o-- MAPessoal

' Módulos de Serviço implementam as interfaces de Serviço
ISA o-- MSA
ISHospede o-- MSHospede
ISHotel o-- MSHotel
ISQuarto o-- MSQuarto
ISReserva o-- MSReserva
ISPessoal o-- MSPessoal

' Módulo de Persistência implementa a interface de Acesso à Informação
IAI o-- MAI

' ==========================================================
' 3. USO/DEPENDÊNCIA (SOQUETE - O CLIENTE)
' ==========================================================

' APRESENTAÇÃO DEPENDE DE SERVIÇO (Vertical)
MAA ..> ISA : Autenticar
MAHospede ..> ISHospede : CRUD
MAHotel ..> ISHotel : CRUD
MAQuarto ..> ISQuarto : CRUD
MAReserva ..> ISReserva : CRUD
MAPessoal ..> ISPessoal : CRUD

' SERVIÇO DEPENDE DE PERSISTÊNCIA (Vertical)
MSA ..> IAI : Persistência
MSHospede ..> IAI : Persistência
MSHotel ..> IAI : Persistência
MSQuarto ..> IAI : Persistência
MSReserva ..> IAI : Persistência
MSPessoal ..> IAI : Persistência

' PERSISTÊNCIA USA DADOS BRUTOS
MAI ..> DadosBrutos : Acesso

' ==========================================================
' 4. DEPENDÊNCIAS HORIZONTAIS (Se houver)
' ==========================================================
' Módulo Reserva depende de Hóspede e Quarto para criar uma reserva válida
MSReserva ..> ISHospede : Verifica Hóspede
MSReserva ..> ISQuarto : Verifica Disponibilidade

@enduml